// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sortByLocaleCompare should sort an array in english 1`] = `
Array [
  "port",
  "Payment",
  "Mars",
  "cart",
  "Car",
  "asylum",
  "Asian",
]
`;

exports[`sortByLocaleCompare should sort an array in french 1`] = `
Array [
  "Adieu",
  "café",
  "Cliché",
  "communiqué",
  "Premier",
  "réservé",
]
`;

exports[`sortByLocaleCompare should sort an array in portuguese 1`] = `
Array [
  "amô",
  "cachê",
  "côncavo",
  "limão",
  "Mãe",
  "tião",
]
`;

exports[`sortByLocaleCompare should sort an object ascending 1`] = `
Array [
  Object {
    "key": "amber",
  },
  Object {
    "key": "cyan",
  },
  Object {
    "key": "green",
  },
  Object {
    "key": "red",
  },
]
`;

exports[`sortByLocaleCompare should sort an object descending 1`] = `
Array [
  Object {
    "key": "red",
  },
  Object {
    "key": "green",
  },
  Object {
    "key": "cyan",
  },
  Object {
    "key": "amber",
  },
]
`;

exports[`sortByPrimitive should sort an array by -number-asc 1`] = `
Array [
  1,
  2,
  2,
  3,
  4,
]
`;

exports[`sortByPrimitive should sort an array by -number-desc 1`] = `
Array [
  4,
  3,
  2,
  2,
  1,
]
`;

exports[`sortByPrimitive should sort an array by cycle-number-asc 1`] = `
Array [
  Object {
    "cycle": 1,
  },
  Object {
    "cycle": 3,
  },
  Object {
    "cycle": 3,
  },
  Object {
    "cycle": 4,
  },
]
`;

exports[`sortByPrimitive should sort an array by cycle-number-desc 1`] = `
Array [
  Object {
    "cycle": 4,
  },
  Object {
    "cycle": 3,
  },
  Object {
    "cycle": 3,
  },
  Object {
    "cycle": 1,
  },
]
`;

exports[`sortByPrimitive should sort an array by status-boolean-asc 1`] = `
Array [
  Object {
    "cycle": 1,
    "status": false,
  },
  Object {
    "cycle": 4,
    "status": false,
  },
  Object {
    "cycle": 3,
    "status": true,
  },
  Object {
    "cycle": 3,
    "status": true,
  },
]
`;

exports[`sortByPrimitive should sort an array by status-boolean-desc 1`] = `
Array [
  Object {
    "cycle": 3,
    "status": true,
  },
  Object {
    "cycle": 3,
    "status": true,
  },
  Object {
    "cycle": 1,
    "status": false,
  },
  Object {
    "cycle": 4,
    "status": false,
  },
]
`;
